--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  firebase_core: ^0.5.0
+  firebase_database: ^4.1.1
+  firebase_core: ^0.5.0+1
   firebase_auth: ^0.18.0+1
   provider: ^4.3.2+1
   google_maps_flutter: ^0.5.27+3
