--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
   firebase_auth: ^0.18.0+1
   provider: ^4.3.2+1
   google_maps_flutter: ^0.5.27+3
+  image_picker: ^0.6.7+12
+  image_cropper: ^1.3.1
+  firebase_storage: ^4.0.1
+  permission_handler: ^5.0.1+1
 
 dev_dependencies:
   flutter_test:
