--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   image_cropper: ^1.3.1
   firebase_storage: ^4.0.1
   permission_handler: ^5.0.1+1
+  dio: ^3.0.10
 
 dev_dependencies:
   flutter_test:
