--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   dio: ^3.0.10
   youtube_player_flutter: ^7.0.0+7
   cloud_firestore: ^0.14.3
+  flutter_ringtone_player: ^2.0.0
+  flutter_local_notifications: ^3.0.1+7
 
 dev_dependencies:
   flutter_test:
